--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+# Environment variables - NUNCA subir a git
 .env
+.env.local
+.env.production
+.env.development
+.env*.local
 
 node_modules
 dist
